chore: add more corner cases to testParsePreferredAccountsFrom